# c-eval-exec

./: CMakeLists.txt  README.md  tests.c
include/: eval.h  exec.h
src/: eval.c  exec.c
